--- a/RobCabardo/ConsecutiveNumbers/ConsecutiveNumbers.csproj
+++ b/RobCabardo/ConsecutiveNumbers/ConsecutiveNumbers.csproj
@@ -4,7 +4,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>ebf5e638-77d2-4b58-acd3-aa8bbd1acf93</ProjectGuid>
+    <ProjectGuid>{ECEF703E-713C-43C8-BE4C-57860CE6119E}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>ConsecutiveNumbers</RootNamespace>
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="boolean.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
